[package]
name = "logica"
version = "0.1.0"
authors = ["Kaede Fujisaki <kaede@hexe.net>"]
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
cpal = "0.15.3"
log = "0.4.21"
fern = "0.6.2"
chrono = "0.4.38"
eframe = "0.27.2"
